feat: add a new style and upgrade the backend

--- a/source/Website/src/app.html
+++ b/source/Website/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body style="background-color: #2a2b2e; padding:10px; margin:0px">
+	<body style="background-color: white; padding:10px; margin:0px">
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
